# mediainfo-rust

./: .gitignore  Cargo.toml  README.md  WASM_BUILD.md  WASM_INTEGRATION.md  build.rs  build_mediainfo_wasm.sh  create_universal_macos.sh  mediainfo-bridge-worker.js  mediainfo-bridge.js  mediainfo-worker-template.js
.claude/: settings.local.json
.github/workflows/: ci.yaml
examples/: convenience_api.rs  inform.rs
mediainfo_src/: SO_Compile.sh
mediainfo_src/MediaInfoLib/Doc/: MediaInfoDLL_8h_source.html  MediaInfoList_8h_source.html  MediaInfo_8h_source.html  MediaInfo__Const_8h_source.html  annotated.html  classMediaInfoLib_1_1MediaInfo-members.html  classMediaInfoLib_1_1MediaInfo.html  classMediaInfoLib_1_1MediaInfoList-members.html  classMediaInfoLib_1_1MediaInfoList.html  classes.html  dir_04ac3ca04e7df05c28b97e8a54b78cec.html  dir_1948383ebc858d7498bcb23a8a53c434.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  menudata.js  namespaceMediaInfoLib.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_type.html  namespaces.html
mediainfo_src/MediaInfoLib/Source/MediaInfo/: File__Analyze.cpp
mediainfo_src/MediaInfoLib/Source/MediaInfo/Audio/: File_Pcm_M2ts-350fd757.o.tmp
mediainfo_src/ZenLib/Source/ZenLib/: Conf.lo  CriticalSection.lo  Dir.lo  File.lo  FileName.lo  InfoMap.lo  MemoryDebug.lo  OS_Utils.lo  Thread.lo  Translation.lo  Utils.lo  Ztring.lo  ZtringList.lo  ZtringListList.lo  ZtringListListF.lo  int128s.lo  int128u.lo
mediainfo_src/ZenLib/Source/ZenLib/.deps/: Conf.Plo  (+16 more)
src/: c_w_string.rs  convenience_api.rs  ffi.rs  lib.rs  streams.rs  wasm_bridge.rs
(+13 files in other folders)
