[package]
name = "mediainfo"
description = "Rust bindings for libmediainfo"
version = "0.3.0"
edition = "2024"
authors = ["Erick Pires <pires@erickpires.com>", "Adam Browne <adambr@hey.com>"]
license = "MIT"
links = "mediainfo"
build = "build.rs"
repository = "https://github.com/abrowne2/mediainfo-rust"
keywords = ["mediainfo", "libmediainfo", "MediaInfo"]
readme = "README.md"
exclude = [
    "examples/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
delegate = "0.13"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6"
anyhow = "1.0"
[build-dependencies]
pkg-config = "0.3"
cc = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "FileReader",
  "Blob",
]

# Features for different build targets
[features]
default = []
emscripten-bridge = []  # Enable when building for dual-wasm with MediaInfo Emscripten bridge
